--- a/src/sass/base/_about-manufacture.scss
+++ b/src/sass/base/_about-manufacture.scss
@@ -34,6 +34,14 @@
             color: $first_color;
         }
     }
+    &__hidden-text {
+        display: none;
+        font-family: 'Raleway';
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 26px;
+        color: $third_color;
+    }
 
     &__link {
         margin-top: 44px;
@@ -128,6 +136,12 @@
 
     &_white {
         background-color: $default_color;
+    }
+    &_hidden {
+        display: none;
+    }
+    &_show {
+        display: block !important;
     }
 }
 
