--- a/src/sass/block/about-company/_founder.scss
+++ b/src/sass/block/about-company/_founder.scss
@@ -1,12 +1,11 @@
 .founder {
-    padding: 126px 0 64px;
+    padding: 100px 0 90px;
     background-color: $second_bg_color;
 
     &__wrapper {
         margin: 0 auto;
         width: 1290px;
         display: flex;
-        justify-content: space-between;
     }
 
     &__photo {
@@ -15,36 +14,36 @@
     }
 
     &__info {
+        margin-left: 43px;
         width: 384px;
     }
 
     &__info-title {
+        margin-top: 32px;
         font-family: 'Raleway';
         font-weight: 800;
         font-size: 32px;
         line-height: 38px;
-        letter-spacing: 0.01em;
         color: $third_color;
     }
 
     &__info-subtitle {
-        margin-top: 18px;
+        margin-top: 11px;
         font-family: 'Montserrat';
         font-weight: 500;
         font-size: 16px;
         line-height: 21px;
-        letter-spacing: 0.01em;
         color: $third_color;
     }
 
     &__info-quote {
-        margin-top: 44px;
-        margin-left: 38px;
+        margin-top: 37px;
+        margin-left: 39px;
         font-family: 'Raleway';
         font-style: italic;
         font-weight: 500;
         font-size: 15px;
-        letter-spacing: 0.01em;
+        line-height: 20px;
         position: relative;
         &::before {
             content: url('../icons/about-company/quotes.svg');
@@ -57,7 +56,7 @@
     }
 
     &__info-link {
-        margin-top: 64px;
+        margin-top: 58px;
         width: 188px;
         height: 52px;
         border: 1px solid #337d5a;
@@ -79,7 +78,8 @@
     }
 
     &__history {
-        padding: 31px 34px 43px 47px;
+        margin-left: 66px;
+        padding: 31px 34px 55px 47px;
         width: 453px;
         height: 100%;
         background-color: $first_color;
@@ -95,12 +95,12 @@
     }
 
     &__history-subtitle {
-        margin-top: 38px;
+        margin-top: 32px;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 500;
         font-size: 14px;
-        line-height: 22px;
+        line-height: 21px;
         color: $default_color;
     }
 }
@@ -110,10 +110,14 @@
         &__wrapper {
             margin: 0 25px;
             width: auto;
+            justify-content: space-between;
             flex-wrap: wrap;
         }
         &__info {
             margin: 0 10px;
+        }
+        &__history {
+            margin-left: 0;
         }
     }
 }
