--- a/src/sass/block/for-clients/_info-for-clients.scss
+++ b/src/sass/block/for-clients/_info-for-clients.scss
@@ -1,5 +1,5 @@
 .info-for-clients {
-    padding: 81px 0 116px;
+    padding: 81px 0 131px;
 
     &__wrapper {
         margin: 0 auto;
@@ -14,12 +14,13 @@
         font-weight: 800;
         font-size: 45px;
         line-height: 53px;
-        letter-spacing: 0.01em;
         color: $third_color;
     }
 
     &__subtitle {
-        width: 356px;
+        margin-top: 13px;
+        margin-left: 45px;
+        width: 365px;
         font-family: 'Raleway';
         font-weight: 500;
         font-size: 16px;
@@ -28,6 +29,8 @@
     }
 
     &__text {
+        margin-top: 13px;
+        margin-left: 22px;
         width: 330px;
         font-family: 'Raleway';
         font-weight: 500;
@@ -60,6 +63,7 @@
             }
         }
         &__subtitle {
+            margin-left: 0;
             margin-top: 25px;
             width: auto;
             text-align: center;
@@ -68,6 +72,7 @@
             }
         }
         &__text {
+            margin-left: 0;
             width: auto;
             text-align: center;
             br {
