Checked the 'Product card' page on PixelPerfect

--- a/src/sass/style.product-card.scss
+++ b/src/sass/style.product-card.scss
@@ -2,4 +2,6 @@
 
 @import 'base/header';
 @import 'block/product-card/promo';
+@import 'block/product-card/card';
+@import 'block/product-card/info';
 @import 'base/footer';
