--- a/src/sass/block/product-card/_card.scss
+++ b/src/sass/block/product-card/_card.scss
@@ -14,6 +14,13 @@
         transition: all 0.2s;
         &:hover {
             border-color: $first_color;
+            .card__btn-prev,
+            .card__btn-next {
+                display: block;
+            }
+            .card__slider-img {
+                display: block;
+            }
         }
     }
 
@@ -22,6 +29,7 @@
     }
 
     &__slider-img {
+        display: none;
         position: absolute;
         z-index: 10;
         right: 16px;
@@ -40,9 +48,11 @@
     }
 
     &__btn-prev {
+        display: none;
     }
 
     &__btn-next {
+        display: none;
     }
 
     &__info {
@@ -225,13 +235,87 @@
     margin-left: 0;
     margin-right: 0;
 }
-.swiper-wrapper {
-}
-.swiper-slide {
-}
 .swiper-button-prev,
 .swiper-button-next {
     &::after {
         display: none;
+    }
+}
+
+@media (max-width: 1355px) {
+    .card {
+        &__wrapper {
+            margin: 0 25px;
+            width: auto;
+        }
+        &__info {
+            width: 612px;
+        }
+    }
+}
+@media (max-width: 1254px) {
+    .card {
+        &__slider {
+            width: 360px;
+        }
+    }
+}
+@media (max-width: 1125px) {
+    .card {
+        padding-bottom: 25px;
+        &__wrapper {
+            flex-direction: column;
+            align-items: center;
+            gap: 25px;
+        }
+        &__btn-prev {
+            display: block;
+        }
+        &__btn-next {
+            display: block;
+        }
+        &__slider-img {
+            display: block;
+        }
+    }
+}
+@media (max-width: 630px) {
+    .card {
+        &__title {
+            width: auto;
+        }
+        &__info {
+            width: 100%;
+        }
+        &__composition,
+        &__weight,
+        &__energy,
+        &__life {
+            flex-direction: column;
+        }
+        &__composition-descr,
+        &__weight-descr,
+        &__energy-descr,
+        &__life-descr {
+            margin-top: 10px;
+            width: auto;
+        }
+
+        &__alert {
+            height: 200px;
+            &-text {
+                width: 80%;
+            }
+        }
+    }
+}
+@media (max-width: 425px) {
+    .card {
+        &__slider {
+            width: 100%;
+        }
+        &__wrapper {
+            margin: 0 10px;
+        }
     }
 }
