--- a/src/sass/block/registration/_registration.scss
+++ b/src/sass/block/registration/_registration.scss
@@ -143,6 +143,11 @@
     &__address {
         margin-top: 16px;
         position: relative;
+        input {
+            opacity: 0;
+            position: absolute;
+            bottom: 0;
+        }
     }
 
     &__address-text,
