--- a/src/sass/block/registration/_select.scss
+++ b/src/sass/block/registration/_select.scss
@@ -1,6 +1,8 @@
 .select__head {
-    position: relative;
+    position: absolute;
+    top: 0;
     padding-left: 15px;
+    width: 100%;
     height: 47px;
     display: flex;
     align-items: center;
@@ -31,10 +33,6 @@
     transition: 0.2s ease-in;
 }
 
-.select__head.open::after {
-    transform: translateY(50%) rotate(180deg);
-}
-
 .select__list {
     display: none;
     flex-direction: column;
@@ -47,6 +45,9 @@
     border: 1px solid rgba(0, 0, 0, 0.08);
     &_show {
         display: flex !important;
+        .select__head::after {
+            transform: translateY(50%) rotate(180deg);
+        }
     }
     &_rus {
         display: none;
