--- a/src/sass/block/login/_login.scss
+++ b/src/sass/block/login/_login.scss
@@ -52,6 +52,11 @@
         text-align: center;
     }
 
+    &__forgot {
+        margin: 0 auto;
+        width: auto;
+    }
+
     &__btn {
         height: 50px;
         background-color: $first_color;
